--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-loader": "^3.0.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -22,9 +26,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "expose-loader": "^0.7.5",
     "file-loader": "^1.1.4",
+    "style-loader": "^0.22.1",
+    "url-loader": "^1.1.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
