--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap-loader": "^3.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-resource": "^1.5.1"
   },
   "browserslist": [
     "> 1%",
